--- a/exercicios/ex026/mq001/estilos/tela.css
+++ b/exercicios/ex026/mq001/estilos/tela.css
@@ -10,3 +10,17 @@ html {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
 }
+header {
+    background-color: lightgrey;
+}
+header > h1 {
+    text-align: center;
+}
+menu ul {
+    list-style-type: none;
+    background-color: gray;
+}
+menu li {
+    display: inline-block;
+    padding: 10px;
+}
