--- a/exercicios/ex026/mq001/estilos/tela.css
+++ b/exercicios/ex026/mq001/estilos/tela.css
@@ -21,6 +21,8 @@ menu ul {
     background-color: gray;
 }
 menu li {
+    background-color: darkgray;
+    color: white;
     display: inline-block;
     padding: 10px;
 }
