--- a/exercicios/ex026/mq001/estilos/tela.css
+++ b/exercicios/ex026/mq001/estilos/tela.css
@@ -26,3 +26,8 @@ menu li {
     display: inline-block;
     padding: 10px;
 }
+article {
+    width: 600px;
+    display: block;
+    margin: auto;
+}
