--- a/exercicios/ex026/mq001/estilos/impressora.css
+++ b/exercicios/ex026/mq001/estilos/impressora.css
@@ -14,6 +14,9 @@ html {
 menu {
     display: none;
 }
+article {
+    width: 100%!;
+}
 article::after {
     content: 'Este artigo foi empresso atraves do site www.cursoevideo.com';
 }
