--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -1,3 +1,7 @@
 @charset "UTF-8";
 
 /*aparelho em pe(portrait)*/
+body {
+    background-image: url(../imagem/cev-portrait.jpg);
+    background-position: center bottom;
+}
