--- a/exercicios/ex026/mq004/media-querry.css
+++ b/exercicios/ex026/mq004/media-querry.css
@@ -49,12 +49,19 @@ TV: acima de 1200px
         background-image: url(../imagens/back-pc.jpg);
     }
     img#phone {display: none;}
-    img#tablet {display: block;}
+    img#tablet {display: none;}
     img#print {display: none;}
-    img#pc {display: none;}
+    img#pc {display: block;}
     img#tv {display: none;}
 }
 
-@media screen and (min-width: 1200) {
-    
+@media screen and (min-width: 1200px){
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: block;}
 }
