--- a/exercicios/ex027/flex013 - menu flexbox/mobile.css
+++ b/exercicios/ex027/flex013 - menu flexbox/mobile.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-header > header > nav {
+header, header > nav {
     flex-flow: column nowrap;
 }
 
@@ -9,5 +9,5 @@ header > h1 {
 }
 
 header > nav > a {
-    width: 90px;
+    width: 90vw;
 }
